force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Allowable_Sales_Head_Price__c.field-meta.xml
<CustomField>
    <fullName>Allowable_Sales_Head_Price__c</fullName>
    <formula>SBQQ__Dimension__r.Sales_Head_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allowable Sales Head Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>