force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Approval_level__c.field-meta.xml
<CustomField>
    <fullName>Approval_level__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Approval level</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>