force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Approval_Level_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level_Indicator__c</fullName>
    <formula>IF(Approval_level__c = 0 ||  Final_Unit_Price__c =  Approved_Unit_Price__c ,
 IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;0&quot;,15,15), 
 IF(Approval_level__c &gt;= 1, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;1&quot;,15,15),&apos;&apos;)&amp;&apos; &apos;&amp;
 IF(Approval_level__c &gt;= 2, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;2&quot;,15,15),&apos;&apos;)&amp; &apos; &apos;&amp;
 IF(Approval_level__c &gt;= 3, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;3&quot;,15,15),&apos;&apos;)
)</formula>
    <label>Approval Level Indicator</label>
    <type>Text</type>
</CustomField>