force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Asset_Id__c.field-meta.xml
<CustomField>
    <fullName>Asset_Id__c</fullName>
    <label>Asset Id</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>