force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Bandwidth_Type__c.field-meta.xml
<CustomField>
    <fullName>Bandwidth_Type__c</fullName>
    <label>Bandwidth Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Burstable</fullName>
            </value>
            <value>
                <fullName>Data Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>