force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Base_Value__c.field-meta.xml
<CustomField>
    <fullName>Base_Value__c</fullName>
    <label>Base Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>