force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Bill_From__c.field-meta.xml
<CustomField>
    <fullName>Bill_From__c</fullName>
    <label>Bill From</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IN12</fullName>
            </value>
            <value>
                <fullName>IN14</fullName>
            </value>
            <value>
                <fullName>IN23</fullName>
            </value>
            <value>
                <fullName>IN15</fullName>
            </value>
            <value>
                <fullName>IN22</fullName>
            </value>
            <value>
                <fullName>IN11</fullName>
            </value>
            <value>
                <fullName>IN16</fullName>
            </value>
            <value>
                <fullName>IN24</fullName>
            </value>
            <value>
                <fullName>IN18</fullName>
            </value>
            <value>
                <fullName>IN25</fullName>
            </value>
            <value>
                <fullName>I101</fullName>
            </value>
            <value>
                <fullName>IN26</fullName>
            </value>
            <value>
                <fullName>IN29</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>