force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Bill_From_old__c.field-meta.xml
<CustomField>
    <fullName>Bill_From_old__c</fullName>
    <description>1) IF BU = YSNL THEN BILL FROM = YNS Mumbai - HO  (CODE = IN21)
2) IF BU = YISLLP &amp; SALE TYPE = Sale of Service &amp; LOCATION = Data Centre THEN BILL FROM = Respective Data Centre ELSE BILL FROM = YIS Mumbai - HO (CODE = IN11)</description>
    <formula>IF(TEXT(Business_Unit__c)=&quot;IN10&quot;,
   IF(TEXT(Sale_Type__c)=&quot;ZTAD&quot;,  
     CASE(TEXT( Location__c ),
                 &quot;IN14&quot; , &quot;IN14&quot;, 
                 &quot;IN11&quot; , &quot;IN11&quot;, 
                 &quot;IN12&quot; , TEXT( Location__c ),                 
                 &quot;IN15&quot; , &quot;IN15&quot; ,
                 &quot;IN16&quot; , &quot;IN16&quot; ,
		 &quot;IN18&quot; , &quot;IN18&quot;,
                 &quot;IN19&quot; , &quot;IN19&quot; ,
		 &quot;I101&quot; , &quot;I101&quot;,
                 &quot;I102&quot; , &quot;I102&quot;,
                 &quot;Customer Site&quot;, &quot;IN11&quot;,&quot;&quot;) ,

     CASE(TEXT( Location__c ),
                &quot;IN14&quot; , &quot;IN14&quot;,
                &quot;IN11&quot; , &quot;IN11&quot;,
                &quot;IN12&quot; , &quot;IN11&quot;,
                &quot;IN15&quot; , &quot;IN15&quot;,
                &quot;IN16&quot; , &quot;IN16&quot;,
		&quot;IN18&quot; , &quot;IN18&quot;,
                &quot;IN19&quot; , &quot;IN19&quot; ,
		&quot;I101&quot; , &quot;I101&quot;,
                &quot;I102&quot; , &quot;I102&quot;,
                &quot;Customer Site&quot; ,&quot;IN11&quot;,&quot;&quot; ) )  , 

IF(TEXT(Sale_Type__c)=&quot;ZTAD&quot;,  
     CASE(TEXT( Location__c ),
                &quot;IN11&quot; , &quot;IN21&quot;,
                &quot;IN14&quot; , &quot;IN22&quot;, 
                &quot;IN15&quot; , &quot;IN23&quot;,  
                &quot;IN12&quot; , &quot;IN21&quot;,
                &quot;IN16&quot; , &quot;IN24&quot;,
		&quot;IN18&quot; , &quot;IN25&quot;,
                &quot;I101&quot; , &quot;IN27&quot;,
                &quot;I102&quot; , &quot;IN28&quot;,
                &quot;IN26&quot; , &quot;IN26&quot;,
                &quot;IN29&quot; , &quot;IN29&quot;,
                &quot;Customer Site&quot; , &quot;IN21&quot;,&quot;&quot;)  , 

   CASE(TEXT( Location__c ),
                &quot;IN16&quot;, &quot;IN16&quot;,
                &quot;IN14&quot;, &quot;IN14&quot;,
                &quot;IN15&quot;, &quot;IN23&quot;,
                &quot;Customer Site&quot; , &quot;IN21&quot;,&quot;&quot;
   ) ) )</formula>
    <label>Bill From</label>
    <type>Text</type>
</CustomField>