force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Billing_Currency__c.field-meta.xml
<CustomField>
    <fullName>Billing_Currency__c</fullName>
    <formula>IF(
    AND(
        Bill_From_old__c == &apos;IN12&apos;,
        ISPICKVAL(SBQQ__Quote__r.Contract_Currency__c, &apos;INR&apos;)
    ),
    &apos;USD&apos;,
     TEXT( SBQQ__Quote__r.Contract_Currency__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Currency</label>
    <type>Text</type>
</CustomField>