force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Billing_to_be_done_Online__c.field-meta.xml
<CustomField>
    <fullName>Billing_to_be_done_Online__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <label>Billing to be done Online?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>