force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Bundle_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Quantity__c</fullName>
    <formula>SBQQ__RequiredBy__r.SBQQ__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bundle Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>