force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Burstable_Upto__c.field-meta.xml
<CustomField>
    <fullName>Burstable_Upto__c</fullName>
    <formula>IF(
    ISPICKVAL( Bandwidth_Type__c, &apos;Burstable&apos;),
    SBQQ__Quantity__c * SBQQ__Product__r.Burstable_Limit__c,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Burstable Upto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>