force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Burstable_upto_bundle__c.field-meta.xml
<CustomField>
    <fullName>Burstable_upto_bundle__c</fullName>
    <label>Burstable upto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>