force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Business_Unit_Formula__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Formula__c</fullName>
    <formula>CASE(TEXT(Business_Unit__c),
						&apos;IN10&apos;,&apos;Yotta Data Services Private Limited&apos;,
						&apos;IN20&apos;,&apos;Yotta Network Services Private Limited&apos;,
						&apos;&apos;)</formula>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>