force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Cloned_From_Quote_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>Cloned_From_Quote_Line_Id__c</fullName>
    <label>Cloned From Quote Line Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>