force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>Contract_Id__c</fullName>
    <formula>IF(
    ISBLANK( SBQQ__Quote__r.SBQQ__Opportunity2__r.SBQQ__RenewedContract__c ),
    SBQQ__Quote__r.SBQQ__Opportunity2__r.SBQQ__AmendedContract__c,
    SBQQ__Quote__r.SBQQ__Opportunity2__r.SBQQ__RenewedContract__c
)</formula>
    <label>Contract Id</label>
    <type>Text</type>
</CustomField>