force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Dimension_Name__c.field-meta.xml
<CustomField>
    <fullName>Dimension_Name__c</fullName>
    <formula>SBQQ__Dimension__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dimension Name</label>
    <type>Text</type>
</CustomField>