force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Dimension_Type__c.field-meta.xml
<CustomField>
    <fullName>Dimension_Type__c</fullName>
    <formula>TEXT(SBQQ__Dimension__r.Dimension_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dimension Type</label>
    <type>Text</type>
</CustomField>