force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Disable_Quantity_Multiplication__c.field-meta.xml
<CustomField>
    <fullName>Disable_Quantity_Multiplication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Quantity Multiplication</label>
    <type>Checkbox</type>
</CustomField>