force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Disable_Quantity_Multiplication_for__c.field-meta.xml
<CustomField>
    <fullName>Disable_Quantity_Multiplication_for__c</fullName>
    <formula>SBQQ__ProductOption__r.Disable_Quantity_Multiplication__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disable Quantity Multiplication</label>
    <type>Checkbox</type>
</CustomField>