force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Distributor_Partner_Commission__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Partner_Commission__c</fullName>
    <label>Distributor Partner Commission %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>