force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Distributor_Price__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Price__c</fullName>
    <formula>SBQQ__Dimension__r.Distributor_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>