force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Execute_SCF_Validations__c.field-meta.xml
<CustomField>
    <fullName>Execute_SCF_Validations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Execute SCF Validations will be updated as TRUE by Custom Script. All the SCF related validations will be executed once this is set as TRUE</description>
    <label>Execute SCF Validations</label>
    <type>Checkbox</type>
</CustomField>