force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Final_Net_Price__c.field-meta.xml
<CustomField>
    <fullName>Final_Net_Price__c</fullName>
    <label>Final Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>