force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Final_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Final_Unit_Price__c</fullName>
    <label>Final Unit Price</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>