force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Final_Unit_Price_RO__c.field-meta.xml
<CustomField>
    <fullName>Final_Unit_Price_RO__c</fullName>
    <formula>Final_Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>