force-app/main/default/objects/SBQQ__QuoteLine__c/fields/GST_Tag__c.field-meta.xml
<CustomField>
    <fullName>GST_Tag__c</fullName>
    <label>GST Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>