force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Include_In_Percent_Of_Total__c.field-meta.xml
<CustomField>
    <fullName>Include_In_Percent_Of_Total__c</fullName>
    <formula>SBQQ__Product__r.SBQQ__IncludeInMaintenance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Include In Percent Of Total</label>
    <type>Checkbox</type>
</CustomField>