force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Information_Note__c.field-meta.xml
<CustomField>
    <fullName>Information_Note__c</fullName>
    <label>Information Note</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>