force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Internal_Cost__c.field-meta.xml
<CustomField>
    <fullName>Internal_Cost__c</fullName>
    <formula>SBQQ__Dimension__r.Internal_Cost_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>