force-app/main/default/objects/SBQQ__QuoteLine__c/fields/IR_Number__c.field-meta.xml
<CustomField>
    <fullName>IR_Number__c</fullName>
    <label>IR Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>