force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Lead_Implementation_Time_Week__c.field-meta.xml
<CustomField>
    <fullName>Lead_Implementation_Time_Week__c</fullName>
    <label>Lead Implementation Time (Week)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>