force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Line_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Id__c</fullName>
    <label>Line Item Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>