force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Line_Sr_No__c.field-meta.xml
<CustomField>
    <fullName>Line_Sr_No__c</fullName>
    <label>Line Sr No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>