force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <defaultValue>&quot;Navi Mumbai – DC1&quot;</defaultValue>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IN12</fullName>
                <label>YIS NM1 - Data Center</label>
            </value>
            <value>
                <fullName>Customer Site</fullName>
            </value>
            <value>
                <fullName>IN14</fullName>
                <label>YIS AP1 - Data Center</label>
            </value>
            <value>
                <fullName>IN15</fullName>
                <label>YIS KA1 - Data Center</label>
            </value>
            <value>
                <fullName>IN11</fullName>
                <default>true</default>
                <label>Mumbai Region</label>
            </value>
            <value>
                <fullName>IN16</fullName>
                <label>YIS TB1 - Data Center</label>
            </value>
            <value>
                <fullName>IN18</fullName>
                <label>YIS D1 - Data Center</label>
            </value>
            <value>
                <fullName>IN19</fullName>
                <label>YIS AS1 - Office</label>
            </value>
            <value>
                <fullName>I101</fullName>
                <label>YIS TN1 - Data Center</label>
            </value>
            <value>
                <fullName>I102</fullName>
                <label>YIS TB2 - Data Center</label>
            </value>
            <value>
                <fullName>IN26</fullName>
                <label>YIS G1 - Office</label>
            </value>
            <value>
                <fullName>IN29</fullName>
                <label>YIS TS - Office</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>