force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Location_Based_Discount__c.field-meta.xml
<CustomField>
    <fullName>Location_Based_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Location Based Discount</label>
    <type>Checkbox</type>
</CustomField>