force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Location_Discount__c.field-meta.xml
<CustomField>
    <fullName>Location_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Location Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>