force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Max_Limit__c.field-meta.xml
<CustomField>
    <fullName>Max_Limit__c</fullName>
    <description>Backend field for max check</description>
    <formula>Null</formula>
    <label>Max Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>