force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Minimum_Contract_Period_Months__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Contract_Period_Months__c</fullName>
    <label>Minimum Contract Period (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>