force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Mod_Value__c.field-meta.xml
<CustomField>
    <fullName>Mod_Value__c</fullName>
    <formula>MOD( Component_Quantity__c, Multiplier__c)</formula>
    <label>Mod Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>