force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Month_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Month_Subscription__c</fullName>
    <formula>IF(CEILING((SBQQ__EndDate__c - SBQQ__StartDate__c)/30.4167) &gt;12, 12, CEILING((SBQQ__EndDate__c - SBQQ__StartDate__c)/30.4167))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month Subscription</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>