force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Monthly_Price__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Price__c</fullName>
    <formula>Final_Unit_Price__c * SBQQ__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>