force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Original_Line_Sr_No__c.field-meta.xml
<CustomField>
    <fullName>Original_Line_Sr_No__c</fullName>
    <label>Original Line Sr No.</label>
    <length>18</length>
    <type>Text</type>
</CustomField>