force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Original_SCF_Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Original_SCF_Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original SCF Quote Line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Quote Lines (Original SCF Quote Line)</relationshipLabel>
    <relationshipName>Original_SCF_Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>