force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Original_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Original_Unit_Price__c</fullName>
    <formula>SBQQ__Dimension__r.SBQQ__UnitPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>