force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Partner_Price__c.field-meta.xml
<CustomField>
    <fullName>Partner_Price__c</fullName>
    <formula>SBQQ__Dimension__r.Partner_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>