force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PDF_Generated__c.field-meta.xml
<CustomField>
    <fullName>PDF_Generated__c</fullName>
    <formula>SBQQ__Quote__r.Is_PDF_Generated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PDF Generated?</label>
    <type>Checkbox</type>
</CustomField>