force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Percentage_of_Total_Product__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_Total_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Percentage of Total Product</label>
    <type>Checkbox</type>
</CustomField>