force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Price_Dimension_Type__c.field-meta.xml
<CustomField>
    <fullName>Price_Dimension_Type__c</fullName>
    <label>Price Dimension Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>