force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Bu__c.field-meta.xml
<CustomField>
    <fullName>Product_Bu__c</fullName>
    <formula>TEXT( SBQQ__Product__r.Product_BU__c )</formula>
    <label>Product Bu</label>
    <type>Text</type>
</CustomField>