force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Feature__c.field-meta.xml
<CustomField>
    <fullName>Product_Feature__c</fullName>
    <formula>CASESAFEID( SBQQ__ProductOption__r.SBQQ__Feature__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Feature</label>
    <type>Text</type>
</CustomField>