force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Compute</fullName>
            </value>
            <value>
                <fullName>Backup and Recovery</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>Third Party Cloud</fullName>
            </value>
            <value>
                <fullName>Colo Services</fullName>
            </value>
            <value>
                <fullName>Colo Support Services</fullName>
            </value>
            <value>
                <fullName>DC Build</fullName>
            </value>
            <value>
                <fullName>Infra Management</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Cloud Connect</fullName>
            </value>
            <value>
                <fullName>Internet Bandwidth</fullName>
            </value>
            <value>
                <fullName>Managed Network</fullName>
            </value>
            <value>
                <fullName>Manged Security</fullName>
            </value>
            <value>
                <fullName>Ad-hoc</fullName>
            </value>
            <value>
                <fullName>Traded Goods</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>