force-app/main/default/objects/SBQQ__QuoteLine__c/fields/ProductLineText__c.field-meta.xml
<CustomField>
    <fullName>ProductLineText__c</fullName>
    <formula>SBQQ__Product__r.Product_Line_Text__c</formula>
    <label>ProductLineText</label>
    <type>Text</type>
</CustomField>