force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Quote_SCF_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_SCF_Type__c</fullName>
    <formula>TEXT( SBQQ__Quote__r.SCF_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote SCF Type</label>
    <type>Text</type>
</CustomField>