force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Quote_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Start_Date__c</fullName>
    <formula>SBQQ__Quote__r.SBQQ__StartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Start Date</label>
    <type>Date</type>
</CustomField>