force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Quote_Status__c.field-meta.xml
<CustomField>
    <fullName>Quote_Status__c</fullName>
    <formula>TEXT( SBQQ__Quote__r.SBQQ__Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Status</label>
    <type>Text</type>
</CustomField>