force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Quote_Subscription_Term__c.field-meta.xml
<CustomField>
    <fullName>Quote_Subscription_Term__c</fullName>
    <formula>SBQQ__Quote__r.SBQQ__SubscriptionTerm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Subscription Term</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>