force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Required_By_Bill_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Required_By_Bill_Start_Date__c</fullName>
    <description>Used for Price Rule. Component Bill Start Date gets removed in Up/Dn, hence bundle&apos;s date is being used</description>
    <formula>SBQQ__RequiredBy__r.Subscription_Bill_Start_Date__c</formula>
    <label>Required By Bill Start Date</label>
    <type>Date</type>
</CustomField>