force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Required_By_Original_Quote_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>Required_By_Original_Quote_Line_Id__c</fullName>
    <formula>SBQQ__RequiredBy__r.Original_SCF_Quote_Line__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Required By Original Quote Line Id</label>
    <type>Text</type>
</CustomField>